[tool.poetry]
name = "fullsun"
version = "0.1.0"
description = ""
authors = ["Franziska Witzel <franziska.witzel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.65.2"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]
mypy = "^0.902"
black = "^21.6b0"
isort = "^5.8.0"
pylint = "^2.8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
